♻️✨ refactor the api to use a service layer, introduce very bare bones AI catgorization endpoints
